--- a/portraits.html
+++ b/portraits.html
@@ -118,6 +118,7 @@
                 </a>
               </div>
             </div>
+
             <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Portraits/DSC08087-12.jpg"
@@ -140,14 +141,14 @@
             </div>
             <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="Images/Portraits/DSC07291.jpg"
+                <a href="Images/Portraits/DSC07574.jpg"
                   data-fancybox="gallery">
-                  <img alt="girl with dog"
+                  <img alt="graduation photoshoot"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Portraits/DSC07291.jpg" />
+                    src="Images/Portraits/DSC07574.jpg" />
                 </a>
               </div>
-            </div>            
+            </div>                   
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Portraits/DSC04823-Enhanced-NR.jpg"
@@ -168,26 +169,37 @@
                 </a>
               </div>
             </div>   
-            <div class="w-full md:w-1/3 p-1">
+            <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="Images/Portraits/DSC04472.jpg"
+                <a href="Images/Portraits/DSC04474.jpg"
                   data-fancybox="gallery">
                   <img alt="girl with a dog"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Portraits/DSC04472.jpg" />
+                    src="Images/Portraits/DSC04474.jpg" />
+                </a>
+              </div>
+            </div>
+            <div class="w-full md:w-1/2 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Portraits/DSC07291.jpg"
+                  data-fancybox="gallery">
+                  <img alt="girl with dog"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Portraits/DSC07291.jpg" />
                 </a>
               </div>
             </div>         
+           
             <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="Images/Portraits/DSC07442-Edit-2-Edit.jpg"
+                <a href="Images/Portraits/DSC05071.jpg"
                   data-fancybox="gallery">
-                  <img alt="girl reaching for umbrella"
+                  <img alt="professional headshot"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Portraits/DSC07442-Edit-2-Edit.jpg" />
+                    src="Images/Portraits/DSC05071.jpg" />
                 </a>
               </div>
-            </div>               
+            </div>
             <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Portraits/DSC09470.jpg"
@@ -198,7 +210,17 @@
                 </a>
               </div>
             </div>
-            
+            <div class="w-full md:w-1/3 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Portraits/DSC05091.jpg"
+                  data-fancybox="gallery">
+                  <img alt="professional headshot at the law quad"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Portraits/DSC05091.jpg" />
+                </a>
+              </div>
+            </div>
+
 
           </div>
         </div>
