--- a/street.html
+++ b/street.html
@@ -87,7 +87,8 @@
       <div class="container w-full">
         <div class="flex flex-wrap w-full">
           <div class="flex w-full flex-wrap">
-            <div class="w-full md:w-1/2 p-1">
+
+            <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Street/DSC01578-6.jpg"
                   data-fancybox="gallery">
@@ -97,7 +98,7 @@
                 </a>
               </div>
             </div>
-            <div class="w-full md:w-1/2 p-1">
+            <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Street/DSC07386-2.jpg"
                   data-fancybox="gallery">
@@ -107,7 +108,7 @@
                 </a>
               </div>
             </div>
-            <div class="w-full md:w-1/2 p-1">
+            <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Street/DSC08980.jpg"
                   data-fancybox="gallery">
@@ -117,7 +118,8 @@
                 </a>
               </div>
             </div>
-            <div class="w-full md:w-1/2 p-1">
+
+            <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Street/DSC09530.jpg"
                   data-fancybox="gallery">
@@ -129,11 +131,11 @@
             </div>
             <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="Images/Street/DSC07253-2.jpg"
+                <a href="Images/Street/DSC09527.jpg"
                   data-fancybox="gallery">
-                  <img alt="walk sign in Detroit"
+                  <img alt="guy skating in an alleyway"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Street/DSC07253-2.jpg" />
+                    src="Images/Street/DSC09527.jpg" />
                 </a>
               </div>
             </div>
@@ -160,6 +162,48 @@
             </div>
             <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
+                <a href="Images/Street/DSC01214-2.jpg"
+                  data-fancybox="gallery">
+                  <img alt="lights at Campus Martius"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Street/DSC01214-2.jpg" />
+                </a>
+              </div>
+            </div>
+            <div class="w-full md:w-1/3 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Street/DSC01456.jpg"
+                  data-fancybox="gallery">
+                  <img alt="staff iceskating at Campus Martius"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Street/DSC01456.jpg" />
+                </a>
+              </div>
+            </div>
+
+
+            <div class="w-full md:w-1/3 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Street/DSC07253-2.jpg"
+                  data-fancybox="gallery">
+                  <img alt="walk sign in Detroit"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Street/DSC07253-2.jpg" />
+                </a>
+              </div>
+            </div>
+            <div class="w-full md:w-1/3 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Street/DSC07825.jpg"
+                  data-fancybox="gallery">
+                  <img alt="Canada street"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Street/DSC07825.jpg" />
+                </a>
+              </div>
+            </div>
+            <div class="w-full md:w-1/3 p-1">
+              <div class="overflow-hidden h-full w-full">
                 <a href="Images/Street/DSC09241.jpg"
                   data-fancybox="gallery">
                   <img alt="Japantown in San Francisco"
@@ -170,25 +214,35 @@
             </div>
             <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="Images/Street/DSC09527.jpg"
+                <a href="Images/Street/DSC03310.jpg"
                   data-fancybox="gallery">
-                  <img alt="guy skating in an alleyway"
+                  <img alt="artist drawing of Michigan theatre"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Street/DSC09527.jpg" />
+                    src="Images/Street/DSC03310.jpg" />
                 </a>
               </div>
             </div>
-
             <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="Images/Street/DSC01214-2.jpg"
+                <a href="Images/Street/DSC08750-2.jpg"
                   data-fancybox="gallery">
-                  <img alt="lights at Campus Martius"
+                  <img alt="San Francisco cable car"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Street/DSC01214-2.jpg" />
+                    src="Images/Street/DSC08750-2.jpg" />
                 </a>
               </div>
             </div>
+            <div class="w-full md:w-1/3 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Street/DSC09255-2.jpg"
+                  data-fancybox="gallery">
+                  <img alt="Japantown"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Street/DSC09255-2.jpg" />
+                </a>
+              </div>
+            </div>
+            
           </div>
         </div>
       </div>
