--- a/wedding.html
+++ b/wedding.html
@@ -101,14 +101,15 @@
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="Images/Wedding/DSC00937.jpg"
+                <a href="Images/Wedding/DSC00934.jpg"
                   data-fancybox="gallery">
                   <img alt="bride putting ring on groom"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Wedding/DSC00937.jpg" />
+                    src="Images/Wedding/DSC00934.jpg" />
                 </a>
               </div>
             </div>
+
             <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Wedding/DSC00957.jpg"
@@ -139,7 +140,8 @@
                 </a>
               </div>
             </div>
-            <div class="w-full md:w-1/2 p-1">
+
+            <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Wedding/DSC00904.jpg"
                   data-fancybox="gallery">
@@ -149,7 +151,17 @@
                 </a>
               </div>
             </div>
-            <div class="w-full md:w-1/2 p-1">
+            <div class="w-full md:w-1/3 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Wedding/DSC00918.jpg"
+                  data-fancybox="gallery">
+                  <img alt="groom admiring bride"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Wedding/DSC00918.jpg" />
+                </a>
+              </div>
+            </div>
+            <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Wedding/DSC00888.jpg"
                   data-fancybox="gallery">
@@ -159,6 +171,7 @@
                 </a>
               </div>
             </div>
+
 
             <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
