--- a/wedding.html
+++ b/wedding.html
@@ -172,17 +172,6 @@
               </div>
             </div>
 
-
-            <div class="w-full md:w-1/3 p-1">
-              <div class="overflow-hidden h-full w-full">
-                <a href="Images/Wedding/DSC06055.jpg"
-                  data-fancybox="gallery">
-                  <img alt="flower girls"
-                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Wedding/DSC06055.jpg" />
-                </a>
-              </div>
-            </div>
             <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Wedding/DSC06092.jpg"
@@ -195,14 +184,25 @@
             </div>
             <div class="w-full md:w-1/3 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="Images/Wedding/DSC00923.jpg"
+                <a href="Images/Wedding/DSC06183.jpg"
                   data-fancybox="gallery">
-                  <img alt="bride putting ring on groom"
+                  <img alt="wedding ceremony"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Wedding/DSC00923.jpg" />
+                    src="Images/Wedding/DSC06183.jpg" />
                 </a>
               </div>
             </div>
+            <div class="w-full md:w-1/3 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Wedding/DSC06055.jpg"
+                  data-fancybox="gallery">
+                  <img alt="flower girls"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Wedding/DSC06055.jpg" />
+                </a>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
