--- a/pets.html
+++ b/pets.html
@@ -174,14 +174,27 @@
 
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="Images/Places_Environments/DSC09110.jpg"
+                <a href="Images/Pet/DSC07958-2.jpg"
                   data-fancybox="gallery">
-                  <img alt="a pug running on a beach"
+                  <img alt="sad pug"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Places_Environments/DSC09110.jpg" />
+                    src="Images/Pet/DSC07958-2.jpg" />
                 </a>
               </div>
             </div>
+
+            <div class="w-full md:w-1/2 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Pet/DSC07891-3.jpg"
+                  data-fancybox="gallery">
+                  <img alt="a happy pug"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Pet/DSC07891-3.jpg" />
+                </a>
+              </div>
+            </div>
+
+
           </div>
         </div>
       </div>
