--- a/events.html
+++ b/events.html
@@ -90,7 +90,7 @@
           <div class="flex w-full flex-wrap">
 
 
-            <div class="w-full md:w-1/3 p-1">
+            <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Event/Concert/DSC02169.jpg"
                   data-fancybox="gallery">
@@ -100,7 +100,18 @@
                 </a>
               </div>
             </div>
-            <div class="w-full md:w-1/3 p-1">
+            <div class="w-full md:w-1/2 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Event/Concert/DSC02214.jpg"
+                  data-fancybox="gallery">
+                  <img alt="Maize Mirchi A Cappella group"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Event/Concert/DSC02214.jpg" />
+                </a>
+              </div>
+            </div>
+
+            <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Event/Concert/DSC02347.jpg"
                   data-fancybox="gallery">
@@ -110,7 +121,18 @@
                 </a>
               </div>
             </div>
-            <div class="w-full md:w-1/3 p-1">
+            <div class="w-full md:w-1/2 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Event/Concert/DSC02281.jpg"
+                  data-fancybox="gallery">
+                  <img alt="Michigan Wolveraas dance"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Event/Concert/DSC02281.jpg" />
+                </a>
+              </div>
+            </div>
+
+            <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Event/Concert/DSC02028.jpg"
                   data-fancybox="gallery">
@@ -120,7 +142,39 @@
                 </a>
               </div>
             </div>
+            <div class="w-full md:w-1/2 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Event/Concert/DSC02051.jpg"
+                  data-fancybox="gallery">
+                  <img alt="Michigan Mayuri dance group"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Event/Concert/DSC02051.jpg" />
+                </a>
+              </div>
+            </div>
+
+            <div class="w-full md:w-1/2 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Event/Concert/DSC01854.jpg"
+                  data-fancybox="gallery">
+                  <img alt="Maize DB3 group"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Event/Concert/DSC01854.jpg" />
+                </a>
+              </div>
+            </div>
+            <div class="w-full md:w-1/2 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Event/Concert/DSC01929.jpg"
+                  data-fancybox="gallery">
+                  <img alt="Michigan DB3 dance"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Event/Concert/DSC01929.jpg" />
+                </a>
+              </div>
+            </div>
             
+
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="Images/Event/Yassoo/DSC05967.jpg"
@@ -247,7 +301,18 @@
                 </a>
               </div>
             </div>
-            
+            <div class="w-full p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Event/lantern/DSC04703.jpg"
+                  data-fancybox="gallery">
+                  <img alt="sunset at the Ann Arbor water lantern festival"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Event/lantern/DSC04703.jpg" />
+                </a>
+              </div>
+            </div>
+
+
           </div>
         </div>
       </div>
