--- a/places_environment.html
+++ b/places_environment.html
@@ -88,37 +88,94 @@
       <div class="container w-full">
         <div class="flex flex-wrap w-full">
 
+          <div class="w-full md:w-1/2 p-1">
+            <div class="overflow-hidden h-full w-full">
+              <a href="Images/Places_Environments/DSC08999.jpg"
+                data-fancybox="gallery">
+                <img alt="person looking into the distance on the Black Sands Beach"
+                  class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                  src="Images/Places_Environments/DSC08999.jpg" />
+              </a>
+            </div>
+          </div>
+          <div class="w-full md:w-1/2 p-1">
+            <div class="overflow-hidden h-full w-full">
+              <a href="Images/Places_Environments/DSC09147.jpg"
+                data-fancybox="gallery">
+                <img alt="person looking into the distance on the Black Sands Beach"
+                  class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                  src="Images/Places_Environments/DSC09147.jpg" />
+              </a>
+            </div>
+          </div>
+
           <div class="flex w-full flex-wrap">
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="Images/Places_Environments/DSC09108.jpg"
+                <a href="Images/Places_Environments/DSC09137.jpg"
                   data-fancybox="gallery">
-                  <img alt="Black sands beach"
+                  <img alt="pug running at the beach"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Places_Environments/DSC09108.jpg" />
+                    src="Images/Places_Environments/DSC09137.jpg" />
+                </a>
+              </div>
+            </div>      
+            <div class="w-full md:w-1/2 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Places_Environments/DSC09109.jpg"
+                  data-fancybox="gallery">
+                  <img alt="pug on Black Sands Beach"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Places_Environments/DSC09109.jpg" />
+                </a>
+              </div>
+            </div>
+
+            <div class="w-full md:w-1/2 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Places_Environments/DSC05834.jpg"
+                  data-fancybox="gallery">
+                  <img alt="leaf"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Places_Environments/DSC05834.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="Images/Places_Environments/DSC09110.jpg"
+                <a href="Images/Places_Environments/DSC07113.jpg"
                   data-fancybox="gallery">
-                  <img alt="pug running at the beach"
+                  <img alt="foggy forest"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Places_Environments/DSC09110.jpg" />
+                    src="Images/Places_Environments/DSC07113.jpg" />
                 </a>
               </div>
             </div>
-            <div class="w-full p-1">
+
+            <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="Images/Places_Environments/DSC09147.jpg"
+                <a href="Images/Places_Environments/DSC07876.jpg"
                   data-fancybox="gallery">
-                  <img alt="person looking into the distance on the Black Sands Beach"
+                  <img alt="san francisco bridge"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="Images/Places_Environments/DSC09147.jpg" />
+                    src="Images/Places_Environments/DSC07876.jpg" />
                 </a>
               </div>
             </div>
+            <div class="w-full md:w-1/2 p-1">
+              <div class="overflow-hidden h-full w-full">
+                <a href="Images/Places_Environments/DSC08390.jpg"
+                  data-fancybox="gallery">
+                  <img alt="Dublin hills"
+                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="Images/Places_Environments/DSC08390.jpg" />
+                </a>
+              </div>
+            </div>
+
+      
+
+
           </div>
         </div>
       </div>
