update about me page

--- a/about_me.html
+++ b/about_me.html
@@ -89,31 +89,17 @@
       </div>
       <section class="font-normal text-center text-base md:text-start mx-3 col-span-2 md:col-span-1 my-auto">
         <div class="block md:hidden">
-          <p class="text-3xl font-serif font-bold mb-1">Hey there,</p>
+          <p class="text-3xl font-serif font-bold mb-1">Hey,</p>
           <p class="text-3xl font-serif font-bold mb-6">I'm Kenny <span class="animate-wave">👋</span></p>
         </div>
         <p class="hidden md:block text-3xl font-serif font-bold mb-6">Hey there, I'm Kenny
           <span class="animate-wave">👋</span>
         </p>
         <p class="mb-4">
-          I'm an Southeast Michigan-based photographer with 5 years of experience specializing in candid photography. 
-          I strive to capture people in their natural state. 
-          There's an undeniable charm in these unguarded moments that has captivated me.
+          I'm a photographer based in Southeast Michigan. I specialize in candid photography, capturing people in their natural state. 
         </p>
         <p class="mb-4">
-          My focus is on portraying authenticity. 
-          I like documenting individuals in their familiar environments - whether it's the cityscape, the cozy corners of their homes, or the outdoors. 
-          These settings become the backdrop for stories that unfold spontaneously, showcasing genuine emotions and interactions that words struggle to convey.
-        </p>
-        <p class="mb-4">
-          To me, photography is about seizing fleeting yet significant moments. 
-          With each click, I aim to freeze emotions, connections, and experiences. 
-          I invite you to explore my portfolio and thank you for being a part of my photography journey. 
-        </p>
-
-        <p class="mb-4">
-          If you want to work with me, please don't hesitate to <a href="mailto:klean.visual@gmail.com"><u>email me</u></a>.
-
+          I hope you enjoy my portfolio. If you want to work with me, please don't hesitate to <a href="contact.html"><b>contact me</b></a>. 
         </p>
       </section>
     </div>
