--- a/about_me.html
+++ b/about_me.html
@@ -92,7 +92,7 @@
           <p class="text-3xl font-serif font-bold mb-1">Hey,</p>
           <p class="text-3xl font-serif font-bold mb-6">I'm Kenny <span class="animate-wave">👋</span></p>
         </div>
-        <p class="hidden md:block text-3xl font-serif font-bold mb-6">Hey there, I'm Kenny
+        <p class="hidden md:block text-3xl font-serif font-bold mb-6">Hey, I'm Kenny
           <span class="animate-wave">👋</span>
         </p>
         <p class="mb-4">
