--- a/about_me.html
+++ b/about_me.html
@@ -89,10 +89,10 @@
       </div>
       <section class="font-normal text-center text-base md:text-start mx-3 col-span-2 md:col-span-1 my-auto">
         <div class="block md:hidden">
-          <p class="text-3xl font-serif font-bold mb-1">Hey,</p>
+          <p class="text-3xl font-serif font-bold mb-1">Hi,</p>
           <p class="text-3xl font-serif font-bold mb-6">I'm Kenny <span class="animate-wave">👋</span></p>
         </div>
-        <p class="hidden md:block text-3xl font-serif font-bold mb-6">Hey, I'm Kenny
+        <p class="hidden md:block text-3xl font-serif font-bold mb-6">Hi, I'm Kenny
           <span class="animate-wave">👋</span>
         </p>
         <p class="mb-4">
