--- a/about_me.html
+++ b/about_me.html
@@ -96,10 +96,15 @@
           <span class="animate-wave">👋</span>
         </p>
         <p class="mb-4">
-          I'm a photographer based in Southeast Michigan. I specialize in candid photography, capturing people in their natural state. 
+          I'm a photographer based in Detroit, Michigan. I specialize in candid shots, capturing people in their natural environment. Be it the urban hustle, home comfort, or tranquil outdoors.
+           
         </p>
         <p class="mb-4">
-          I hope you enjoy my portfolio. If you want to work with me, please don't hesitate to <a href="contact.html"><b>contact me</b></a>. 
+           
+          Photography, for me, is about freezing those fleeting yet meaningful moments in life.  Join me in celebrating authenticity through my work. Thanks for showing interest — I really appreciate it!
+        </p>
+        <p class="mb-4">
+          If you're interested in collaborating or have any inquiries, feel free to reach out. You can <a href="contact.html"><b>contact me</b></a>, or connect with me on social media <a href="https://www.instagram.com/klean.visual/"><b> @klean.visual</b></a>. I'm always open to new projects and opportunities. Looking forward to hearing from you!
         </p>
       </section>
     </div>
